test/interp/spec/func-param-after-body.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/func-param-after-body.fail.wast
(;; STDERR ;;;
Error running "sexpr-wasm":
third_party/testsuite/func-param-after-body.fail.wast:1:22: syntax error, unexpected PARAM
(module (func (nop) (param i32)))
                     ^^^^^

;;; STDERR ;;)
